[gd_scene load_steps=4 format=3 uid="uid://7161e76iw0ks"]

[ext_resource type="Script" uid="uid://c7kkxei4auhde" path="res://Score/score.gd" id="1_vxeqm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxeqm"]
bg_color = Color(0.690433, 0.77, 0.2926, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.2546, 0.614613, 0.67, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_hv016"]
font_size = 30

[node name="Score" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxeqm")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 13.0
offset_right = 83.0
offset_bottom = 94.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vxeqm")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hv016")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -73.0
offset_top = 19.0
offset_right = -14.0
offset_bottom = 100.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_vxeqm")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label2" type="Label" parent="PanelContainer2/MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hv016")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.5
offset_top = 18.0
offset_right = 29.5
offset_bottom = 99.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vxeqm")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label3" type="Label" parent="PanelContainer3/MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hv016")
horizontal_alignment = 1
vertical_alignment = 1
